<resources>
    <string name="desc_logo_principal">Logo de la aplicación HoopCoach</string>
    <string name="desc_logo_flecha">Botón de regreso</string>

    <!-- Pantalla Welcome -->
    <string name="app_name">HoopCoach</string>
    <string name="Slogan">\"Eleva tu juego al siguiente nivel\"</string>
    <string name="CREAR_CUENTA">CREAR CUENTA</string>
    <string name="INICIAR_SESION">INICIAR SESIÓN</string>


    <!-- Pantalla Login -->
    <string name="bienvenido">Bienvenido</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="Usuario_o_correo">Usuario o correo</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Olvidaste_contraseña">¿Olvidaste tu contraseña?</string>
    <string name="Ingresar">Ingresar</string>
    <string name="No_cuenta">¿No tienes cuenta?</string>
    <string name="Registrate">Regístrate</string>

    <!-- Pantalla Register -->
    <string name="REGISTRARSE">Registrate para continuar </string>
    <string name="Confirmar_contraseña">Confirmar contraseña</string>
    <string name="Siguiente">Siguiente</string>


    <!-- Pantalla Personal Info -->
    <string name="Perfil">Perfil</string>
    <string name="Instrucción">Ingresa tus datos personales</string>
    <string name="Nombre">Nombre(s)</string>
    <string name="Apellidos">Apellidos</string>
    <string name="Usuario">Nombre de usuario</string>
    <string name="Telefono">Teléfono</string>
    <string name="Fecha_Nacimiento">Fecha de Nacimiento</string>
    <string name="Registrar">Registrar</string>

    <!-- Pantalla Password -->
    <string name="Recuperar_contraseña">Recuperar contraseña</string>
    <string name="Instrucciones">Introduce tu correo electrónico y te enviaremos un enlace para restablecer tu contraseña.</string>
    <string name="EnlaceRecuperacion">Enviar enlace</string>
    <string name="Correo">Correo electrónico</string>
    <string name="No_recibiste_correo">¿No recibiste el correo?</string>
    <string name="Reenviar">Reenviar</string>
    <string name="desc_logo_llave">Logo de contraseña</string>


    <!-- Menu Bottom -->
    <string name="home">Home</string>
    <string name="Empecemos">Comienza tu entrenamiento</string>


    <string name="drills">Drills</string>
    <string name="account">Account</string>

    <!-- Pantalla de cuenta -->
    <string name="my_account">Mi cuenta</string>
    <string name="user">Usuario</string>
    <string name="full_name">Nombre completo</string>
    <string name="items_in_list">Favoritos</string>
    <string name="saved_titles">Ejercicios guardados</string>
    <string name="personal_info_header">Información personal</string>
    <string name="cellphone">Teléfono</string>
    <string name="tap_to_edit">Toca para editar</string>
    <string name="settings">Configuración</string>
    <string name="settings_desc">Notificaciones, seguridad, idioma</string>
    <string name="logout">Cerrar sesión</string>

    <!-- Pantalla Drills (Búsqueda) -->
    <string name="searchbar_hint">Buscar ejercicios…</string>
    <string name="home_icon_description">Inicio</string>
    <string name="action_search">Buscar</string>
    <string name="action_settings">Configuración</string>
    <string name="Frase">\"Los campeones se construyen cuando nadie está mirando.\"</string>
    <string name="BtnClose">Botón de cerrar</string>


    <string name="hello_blank_fragment">hello_blank_fragment</string>
</resources>